k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-cicd-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-cicd-demo
  template:
    metadata:
      labels:
        app: java-cicd-demo
    spec:
      containers:
        - name: java-cicd-demo
          image: image-registry.openshift-image-registry.svc:5000/java-cicd-demo/java-cicd-demo:latest
          ports:
            - containerPort: 8080
