k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-cicd-demo
spec:
  selector:
    app: java-cicd-demo
  ports:
    - port: 80
      targetPort: 8080
