k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: java-cicd-demo
spec:
  to:
    kind: Service
    name: java-cicd-demo
